@@ -6,7 +6,11 @@
 - New: Added build/installation script for .pkg.tar.xz (Arch Linux).
 - New: Added tarball generation script.
 - New: Added Autoconf build scripts for CCExtractor to generate makefiles.
-  
+- New: Added --analyzevideo. If present the video stream will be processed even if the
+  subtitles are in a different stream. This is useful when we want video information
+  (resolution, frame type, etc). -vides now implies this option too. 
+  [Note: Tentative - some possibly breaking changed were made for this, so if you
+  use it validate results]
 
 0.85b (2017-1-26)
 -----------------
